[gd_scene load_steps=3 format=3 uid="uid://xmh07xugyqyc"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_5hm27"]
[ext_resource type="Theme" uid="uid://t73g016048ng" path="res://font_placeholder.tres" id="1_ud1gt"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5hm27")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -148.0
offset_top = 10.0
offset_right = 148.0
offset_bottom = 42.0
grow_horizontal = 2
theme = ExtResource("1_ud1gt")
theme_override_font_sizes/font_size = 32
text = "They Are EVERYWHERE !!!"

[node name="Options" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -106.0
offset_right = 75.0
offset_bottom = 106.0
grow_horizontal = 2
grow_vertical = 2

[node name="Play" type="Button" parent="Options"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
focus_neighbor_top = NodePath("../Quit")
theme = ExtResource("1_ud1gt")
theme_override_font_sizes/font_size = 32
text = "Play"

[node name="Leaderboard" type="Button" parent="Options"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("1_ud1gt")
theme_override_font_sizes/font_size = 32
text = "Leaderboard"

[node name="Options" type="Button" parent="Options"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("1_ud1gt")
theme_override_font_sizes/font_size = 32
text = "Options"

[node name="Quit" type="Button" parent="Options"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
focus_neighbor_bottom = NodePath("../Play")
theme = ExtResource("1_ud1gt")
theme_override_font_sizes/font_size = 32
text = "Quit"

[connection signal="pressed" from="Options/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Options/Leaderboard" to="." method="_on_leaderboard_pressed"]
[connection signal="pressed" from="Options/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Options/Quit" to="." method="_on_quit_pressed"]
